dekodowanie do poprawy

--- a/WpfAppGraphs/WpfAppGraphs.csproj
+++ b/WpfAppGraphs/WpfAppGraphs.csproj
@@ -76,7 +76,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\Prufer.cs" />
-    <Compile Include="Tree.cs" />
+    <Compile Include="TNode.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
